fixed footer and header visibility on mobile

--- a/Client/src/app/app.css
+++ b/Client/src/app/app.css
@@ -17,7 +17,7 @@
     'header header'
     'sidebar page'
     'footer footer';
-  height: 100vh;
+  height: 100dvh;
   overflow: hidden;
 }
 
